--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <br>
-    <ul>
+    <ul class="contents_monaco">
       <li>
         건축계획 분야: 건물 공간계획, 건축프로그램, 실내 디자인 등
       </li>
@@ -99,7 +99,7 @@
       <br>
     </div>
 
-    <ul class="no_style">
+    <ul class="no_style contents_monaco">
       <li>
         2018 - 2020 | 석사 재학 (MS), 연세대학교 실내건축학과 (GPA: 4.15/4.3)
       </li>
@@ -113,7 +113,7 @@
       <span><b>경력</b> </span>
       <br>
     </div>
-    <ul class="no_style">
+    <ul class="no_style contents_monaco">
       <li>
         2018 | 연세대학교 심바이오틱라이프텍연구원 연구보조원
       </li>
@@ -130,7 +130,7 @@
       <span><b>참여 연구개발 과제</b> </span>
       <br>
     </div>
-    <ol>
+    <ol class="contents_monaco">
       <li>
         실내이미지의 객체 및 스타일 기계학습을 통한 인공지능 학습모델 개발과 실내디자인 활용, Pl: 이진국, 한국연구재단, 2019 ~ 2022.
       </li>
@@ -162,7 +162,7 @@
       <span><b>지식재산권 및 등록 소프트웨어</b> </span>
       <br>
     </div>
-    <ol>
+    <ol class="contents_monaco">
       <li>
         딥러닝 알고리즘을 이용한 건축 정보 모델의 객체 유형 정보 인식 장치 및 방법, 특허출원번호 10-2019-0125987, 지원과제: 개방형BIM 기반의 건축설계 자동화지원 기술 및 첨단 유지관리 기반기술 개발, PI: 경희대 김인한, 국토교통부, 2019.10.11
       </li>
@@ -182,7 +182,7 @@
       <span><b>소프트웨어 & 웹 개발</b> </span>
       <br>
     </div>
-    <ol>
+    <ol class="contents_monaco">
       <li>
         시각적 유사도 기반 BIM 객체 추천 및 모델링 지원 Revit plug-in (PI: Prof. Jin-Kook Lee)
       </li>
@@ -203,7 +203,7 @@
       <span><b>수상</b> </span>
       <br>
     </div>
-    <ul class="no_style">
+    <ul class="no_style contents_monaco">
       <li>
         2020 | 우수 논문상, 김진성, 이진국, “설계품질 자동검토 도구를 위한 시각지능 기반 BIM 객체 인식 구현”, 한국CDE학회
       </li>
@@ -226,7 +226,7 @@
       <span><b>국제논문</b> </span>
       <br>
     </div>
-    <ol>
+    <ol class="contents_monaco">
       <li>
         1. Jin-Sung Kim, Jung-Sik Choi, Jin-Kook Lee, 2019, Approach to Design Reference Management using Auto-Recog-nition System of Room and Design Style, International Journal of Engineering & Technology, 8 (1.4) pp.56-64 2019.01.02
       </li>
@@ -237,7 +237,7 @@
       <span><b>국내논문</b> </span>
       <br>
     </div>
-    <ol>
+    <ol class="contents_monaco">
       <li>
         김진성, 이진국, 설계품질 자동검토 도구를 위한 시각지능기반 BIM 객체 인식 구현, 한국CDE학회 논문집, 24(4), pp.1-9. 2019.12
       </li>
@@ -254,7 +254,7 @@
       <span><b>국제학술대회발표</b> </span>
       <br>
     </div>
-    <ol>
+    <ol class="contents_monaco">
       <li>
         Jinsung Kim, Jaeyeol Song, Sanghoon Lee and Jin-Kook Lee, "Recognizing BIM Room Type of Residential Building: Preliminary Test of CNN-based Deep Learning Model", Proceedings of International Congress and Conferences on Computational Design
         and Engineering (i3CDE 2019), Penang, Malaysia, July 2019, pp. 111-112
@@ -296,7 +296,7 @@
       <span><b> 국내외 연수 활동</b> </span>
       <br>
     </div>
-    <ul class="no_style">
+    <ul class="no_style contents_monaco ">
       <li>
         2020.01 | 해외 연수, 실리콘벨리 인공지능 세미나, Facebook, Nividia. CO., HOK, LBNL @ CA, USA
       </li>
