--- a/index.html
+++ b/index.html
@@ -99,31 +99,32 @@
       <br>
     </div>
 
-    <ul class="no_style contents_monaco">
-      <li>
-        2018 - 2020 | 석사 재학 (MS), 연세대학교 실내건축학과 (GPA: 4.15/4.3)
-      </li>
-      <li>
-        2011 - 2017 | 학사 졸업 (BS), 한양대학교 실내건축디자인학과 (GPA: 3.7/4.5)
-      </li>
-    </ul>
+        <span class="contents_monaco">
+        2018 - 2020 | 석사 재학 (MS), 연세대학교 실내건축학과
+        <br>
+        2011 - 2017 | 학사 졸업 (BS), 한양대학교 실내건축디자인학과
+        <br>
+
+    </span>
+
+
     <br>
 
     <div class="contents contents_title">
       <span><b>경력</b> </span>
       <br>
     </div>
-    <ul class="no_style contents_monaco">
-      <li>
+    <span class="contents_monaco">
+
         2018 | 연세대학교 심바이오틱라이프텍연구원 연구보조원
-      </li>
-      <li>
+        <br>
         2017 | 한양대학교 BK21 석사과정 연구원
-      </li>
-      <li>
+        <br>
         2016 | 제이랩 디자인팀 인턴
-      </li>
-    </ul>
+        <br>
+
+    </span>
+
     <br>
 
     <div class="contents contents_title">
@@ -203,23 +204,19 @@
       <span><b>수상</b> </span>
       <br>
     </div>
-    <ul class="no_style contents_monaco">
-      <li>
+    <span class="contents_monaco">
+
         2020 | 우수 논문상, 김진성, 이진국, “설계품질 자동검토 도구를 위한 시각지능 기반 BIM 객체 인식 구현”, 한국CDE학회
-      </li>
-      <li>
+        <br>
         2018 | 최우수 논문상, 김진성, 송재열, 김하얀, 이진국, “딥러닝 기반 이미지 자동인식 기술을 활용한 사무집기 자동인식과 정보관리 시스템과의 연동방안”, 2017년도 하반기 최우수논문상, 2018 FM학회 심포지움
-      </li>
-      <li>
+        <br>
         2017 | 우수발표 포스터논문상, “수도권 지하철역 인근 건물 용도별 에너지사용량 웹기반 시각화 도구 개발”, 2017 한국CDE학회 춘계학술발표대회
-      </li>
-      <li>
+        <br>
         2016 | 공로상, 2016 한양 실내건축디자인전 (졸업작품전)
-      </li>
-      <li>
+        <br>
         2012 | 입선, “For-Rest”, 대한디지털건축대전 (디지털디자인 이미지 부분)
-      </li>
-    </ul>
+        <br>
+    </span>
     <br>
 
     <div class="contents contents_title">
