--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 
     <div class="contents contents_title">
       <span><b>학력</b> </span>
-      <br>
-    </div>
 
-        <span class="contents_monaco">
-        2018 - 2020 | 석사 재학 (MS), 연세대학교 실내건축학과
-        <br>
-        2011 - 2017 | 학사 졸업 (BS), 한양대학교 실내건축디자인학과
-        <br>
+    </div>
+    <br>
+    <span class="contents_monaco">
+      2018 - 2020 | 석사 재학 (MS), 연세대학교 실내건축학과
+      <br>
+      2011 - 2017 | 학사 졸업 (BS), 한양대학교 실내건축디자인학과
+      <br>
 
     </span>
 
@@ -115,13 +115,13 @@
       <br>
     </div>
     <span class="contents_monaco">
-
-        2018 | 연세대학교 심바이오틱라이프텍연구원 연구보조원
-        <br>
-        2017 | 한양대학교 BK21 석사과정 연구원
-        <br>
-        2016 | 제이랩 디자인팀 인턴
-        <br>
+      <br>
+      2018 | 연세대학교 심바이오틱라이프텍연구원 연구보조원
+      <br>
+      2017 | 한양대학교 BK21 석사과정 연구원
+      <br>
+      2016 | 제이랩 디자인팀 인턴
+      <br>
 
     </span>
 
@@ -205,17 +205,18 @@
       <br>
     </div>
     <span class="contents_monaco">
+      <br>
 
-        2020 | 우수 논문상, 김진성, 이진국, “설계품질 자동검토 도구를 위한 시각지능 기반 BIM 객체 인식 구현”, 한국CDE학회
-        <br>
-        2018 | 최우수 논문상, 김진성, 송재열, 김하얀, 이진국, “딥러닝 기반 이미지 자동인식 기술을 활용한 사무집기 자동인식과 정보관리 시스템과의 연동방안”, 2017년도 하반기 최우수논문상, 2018 FM학회 심포지움
-        <br>
-        2017 | 우수발표 포스터논문상, “수도권 지하철역 인근 건물 용도별 에너지사용량 웹기반 시각화 도구 개발”, 2017 한국CDE학회 춘계학술발표대회
-        <br>
-        2016 | 공로상, 2016 한양 실내건축디자인전 (졸업작품전)
-        <br>
-        2012 | 입선, “For-Rest”, 대한디지털건축대전 (디지털디자인 이미지 부분)
-        <br>
+      2020 | 우수 논문상, 김진성, 이진국, “설계품질 자동검토 도구를 위한 시각지능 기반 BIM 객체 인식 구현”, 한국CDE학회
+      <br>
+      2018 | 최우수 논문상, 김진성, 송재열, 김하얀, 이진국, “딥러닝 기반 이미지 자동인식 기술을 활용한 사무집기 자동인식과 정보관리 시스템과의 연동방안”, 2017년도 하반기 최우수논문상, 2018 FM학회 심포지움
+      <br>
+      2017 | 우수발표 포스터논문상, “수도권 지하철역 인근 건물 용도별 에너지사용량 웹기반 시각화 도구 개발”, 2017 한국CDE학회 춘계학술발표대회
+      <br>
+      2016 | 공로상, 2016 한양 실내건축디자인전 (졸업작품전)
+      <br>
+      2012 | 입선, “For-Rest”, 대한디지털건축대전 (디지털디자인 이미지 부분)
+      <br>
     </span>
     <br>
 
@@ -225,7 +226,7 @@
     </div>
     <ol class="contents_monaco">
       <li>
-        1. Jin-Sung Kim, Jung-Sik Choi, Jin-Kook Lee, 2019, Approach to Design Reference Management using Auto-Recog-nition System of Room and Design Style, International Journal of Engineering & Technology, 8 (1.4) pp.56-64 2019.01.02
+        Jin-Sung Kim, Jung-Sik Choi, Jin-Kook Lee, 2019, Approach to Design Reference Management using Auto-Recog-nition System of Room and Design Style, International Journal of Engineering & Technology, 8 (1.4) pp.56-64 2019.01.02
       </li>
     </ol>
     <br>
@@ -293,23 +294,18 @@
       <span><b> 국내외 연수 활동</b> </span>
       <br>
     </div>
-    <ul class="no_style contents_monaco ">
-      <li>
+    <span class="contents_monaco">
+      <br>
         2020.01 | 해외 연수, 실리콘벨리 인공지능 세미나, Facebook, Nividia. CO., HOK, LBNL @ CA, USA
-      </li>
-      <li>
+      <br>
         2017.07 | 해외 연수, LBNL(Lawrence Berkeley National Laboratory), Nvidia .Co, Gould Evans .Co @, CA, USA
-      </li>
-      <li>
+      <br>
         2017.01-02 | Robot Tech Workshop 참여, “Robotic Craft in the City: Digital Fabrication”, 2017 서울비엔날레 @서울 시민청
-      </li>
-      <li>
+      <br>
         2016.08 | 해외 건축기업 탐방, Gensler(Chicago), Perkins+Will(Chicago), SteelCase Headquarter(Michigan), @ US
-      </li>
-      <li>
+      <br>
         2016.07-08 | 해외 연수, Green Building & Interior Design Program(Michigan State of University) @ Michigan, US
-      </li>
-    </ul>
+      </span>
     <br>
 
 
