--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
       <br>
     </div>
     <ol class="contents_monaco">
+      <li>딥러닝 기반 실내이미지 디자인 자동분류 프로그램, 소프트웨어 등록번호: C-2019-035593, PI: 연세대 이진국, 한국연구재단, 2019.11.25
+      </li>
       <li>
         딥러닝 알고리즘을 이용한 건축 정보 모델의 객체 유형 정보 인식 장치 및 방법, 특허출원번호 10-2019-0125987, 지원과제: 개방형BIM 기반의 건축설계 자동화지원 기술 및 첨단 유지관리 기반기술 개발, PI: 경희대 김인한, 국토교통부, 2019.10.11
       </li>
@@ -199,6 +201,21 @@
     </ol>
     <br>
 
+    <div class="contents contents_title">
+      <span><b> 디자인 프로젝트</b> </span>
+      <br>
+    </div>
+    <span class="contents_monaco">
+      <br>2019.12 | 생명건축과 모듈러 Workshop, “The Simple Part to Whole System with Three Legs”, with Prof. Jinyoung Song, 연세대학교 실내건축학과
+      <br>
+      2018.12 | 연세대학교 5G와 실감미디어기반 연구 및 교육 혁신 Workshop, “실감미디어 기반 학술정보원 리모델링 프로젝트”, with Prof. Jin-Kook Lee, 스트라다월드와이드(실감미디어 전문기업 Stradaww), 연세대학교 학술정보원
+      <br>
+      2017.01-02 | Robot Tech Workshop, “Robotic Craft in the City: Digital Fabrication”, 2017 서울비엔날레 @서울 시민청
+      <br>
+      2016.03-6 | 한양대학교 실내건축디자인학과 졸업 작품전, “동작도서관 리뉴얼 프로젝트: Re-bootcamp”
+
+    </span>
+    <br>
 
     <div class="contents contents_title">
       <span><b>수상</b> </span>
@@ -206,7 +223,6 @@
     </div>
     <span class="contents_monaco">
       <br>
-
       2020 | 우수 논문상, 김진성, 이진국, “설계품질 자동검토 도구를 위한 시각지능 기반 BIM 객체 인식 구현”, 한국CDE학회
       <br>
       2018 | 최우수 논문상, 김진성, 송재열, 김하얀, 이진국, “딥러닝 기반 이미지 자동인식 기술을 활용한 사무집기 자동인식과 정보관리 시스템과의 연동방안”, 2017년도 하반기 최우수논문상, 2018 FM학회 심포지움
@@ -236,6 +252,9 @@
       <br>
     </div>
     <ol class="contents_monaco">
+      <li>
+        이상훈, 김진성, 송재열, 이진국, 디자인 초기 현장 시각화를 위한 증강현실기반 접근 방법 – 대학교학술정보관 공간개선 디자인 안 예시를 중심으로, 한국 실내디자인학회 논문집, 2020.02.28
+      </li>
       <li>
         김진성, 이진국, 설계품질 자동검토 도구를 위한 시각지능기반 BIM 객체 인식 구현, 한국CDE학회 논문집, 24(4), pp.1-9. 2019.12
       </li>
@@ -291,25 +310,88 @@
     <br>
 
     <div class="contents contents_title">
+      <span><b> 국내컨퍼런스페이퍼</b> </span>
+      <br>
+    </div>
+    <span class="contact_monaco">
+      <ol>
+        <li>
+          김진성, 이진국. "2D-CNN 기반 미인식 건축객체 유형정보 추론 접근방법 ", 2019 CDE학회 동계학술대회 pp.72-75. 2019.2
+        </li>
+        <li>
+          김진성, 이진국. "실내이미지 자동인식 기술을 활용한 지능형 디자인 사례 관리", 2018 실내디자인학회 추계학술대회 논문집, pp.72-75. 2018.10
+        </li>
+        <li>
+          송재열, 김진성, 이진국, “지능형 BIM 기반 설계품질검토 자동화를 위한 문장 내 대상 객체 및 속성정보 인식모델 구현 접근방안”, 2018 CDE학회 하계학술대회, pp.191-192, 2018.08
+        </li>
+        <li>
+          김진성, 송재열, 이진국, “딥러닝 기반 국내 아파트 실내사진 자동분류”, 2018 CDE학회 하계학술대회, pp.280-281, 2018.08
+        </li>
+        <li>
+          송재열, 김진성, 이진국. “딥러닝 기반 자연어처리 기술을 이용한 건축법규 문장간 유사도 측정과 활용방안”, 2018 CDE학회 동계학술대회, pp.472-pp.474 2018. 02
+        </li>
+        <li>
+          김진성, 김하얀, 이진국. (2017). “딥러닝기반 실내이미지 디자인스타일 자동분류”. 한국실내디자인학회 학술대회논문집, 19(3), 95-98. 2017.10
+        </li>
+        <li>
+          김진성, 이진국, 김하얀, 송재열 "건축물 설계품질 검토규칙의 KBimCode 변환을 지원하는 웹 기반 데이터베이스 응용 방안 제안”, 2017년도 한국CDE학회 하계학술대회논문집, pp. 37-39, 2017.08
+        </li>
+        <li>
+          신재영, 이진국, 김하얀, 김진성,“BIM기반 실내 동선 보행친화성 지표를 활용한 설계 대안평가 사례연구”, 2017 한국CDE학회 동계학술대회 논문집, pp.635-637, 2017.02
+        </li>
+        <li>
+          김하얀, 이진국, 신재영, 김진성,“Visual Language 기반 파라메트릭 모델링을 활용한 BIM 실내건축객체속성 정보활용사례연구”, 2017 한국CDE학회 동계학술대회 논문집, pp.632-634, 2017.02
+        </li>
+        <li>
+          이진국, 김진성, 김하얀, 신재영,“수도권 지하철역 인근 건물 용도별 에너지사용량 웹 기반 시각화 도구개발”, 2017 한국CDE학회 동계학술대회논문집, pp.638-640, 2017.02
+        </li>
+      </ol>
+    </span>
+    <br>
+
+
+    <div class="contents contents_title">
       <span><b> 국내외 연수 활동</b> </span>
       <br>
     </div>
     <span class="contents_monaco">
+      <br>2020.02 | 해외연수 - 실리콘벨리 주요 IT 기업 인공지능/머신러닝 세미나 with Facebook, Nividia. CO. @ CA, USA
       <br>
-        2020.01 | 해외 연수, 실리콘벨리 인공지능 세미나, Facebook, Nividia. CO., HOK, LBNL @ CA, USA
+      2020.02 | 해외연수 - 샌프란시스코 글로벌 건축설계사 도시 및 건축 설계 세미나 with HOK @ CA, USA
       <br>
-        2017.07 | 해외 연수, LBNL(Lawrence Berkeley National Laboratory), Nvidia .Co, Gould Evans .Co @, CA, USA
+      2020.02 | 해외연수 - 미국 건물 성능 및 에너지 연구 세미나 with LBNL(Lawrence Berkeley National Laboratory), @ CA, USA
       <br>
-        2017.01-02 | Robot Tech Workshop 참여, “Robotic Craft in the City: Digital Fabrication”, 2017 서울비엔날레 @서울 시민청
+      2017.07 | 해외연수 - 실리콘벨리 주요 IT 기업 인공지능/머신러닝 세미나 with Nvidia .Co
       <br>
-        2016.08 | 해외 건축기업 탐방, Gensler(Chicago), Perkins+Will(Chicago), SteelCase Headquarter(Michigan), @ US
+      2017.07 | 해외연수 - 샌프란시스코 로컬 건축설계사 건축 설계 세미나 with Gould Evans .Co @ CA, USA
       <br>
-        2016.07-08 | 해외 연수, Green Building & Interior Design Program(Michigan State of University) @ Michigan, US
-      </span>
+      2017.07 | 해외연수 - 글로벌 건물 성능 및 에너지 연구 세미나 with LBNL(Lawrence Berkeley National Laboratory), @ CA, USA
+      <br>
+      2016.08 | 해외 건축기업 탐방, Gensler(Chicago), Perkins+Will(Chicago), SteelCase Headquarter(Michigan), @ US
+      <br>
+      2016.07-08 | 해외연수 - 친환경건축과 LEED Certificate, “Green Building & Interior Design Program” with prof. Suk-kyung Kim, Michigan State of University @ Michigan, US
+    </span>
     <br>
 
 
-
+    <div class="contents contents_title">
+      <span><b> 교육, 봉사, 창업, 동아리 등 기타활동</b> </span>
+      <br>
+    </div>
+    <span class="contents_monaco">
+      2018-2020 | 연세대학교 실내건축학과 Design Computing/CAD/BIM 교육조교
+      <br>
+      2019 | 연세대학교 2019 대학원생 창업경진대회 참가 - 개인 맞춤형 날씨 알림서비스 “My Whether”,
+      <br>
+      018 | 연세대학교 실내건축학과 AutoCAD & SketchUp 특강
+      <br>
+      2017 | 한양대학교 마라톤 동아리
+      <br>
+      2012 | 부천시 방과후 다자녀 돌봄센터 봉사
+      <br>
+      2011 | 부천고등학교 학습 및 진로 상담 멘토
+    </span>
+    <br>
 
 
 
