항목간 간격 조절

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
       <br>
       연세대학교 실내건축학과
       <br>
-      연락처 : <a href="mailto:jinsungkim212@gmail.com" style=" color:#003876" target="_blank">jinsungkim212@gmail.com</a></span><br />
+      연락처 : <a href="mailto:jinsungkim212@gmail.com" style=" color:#003876" target="_blank">jinsungkim212@gmail.com</a></span>
 
+    <br>
     <br>
     <br>
 
@@ -92,7 +93,7 @@
 
     <br>
     <br>
-    <br>
+
 
     <div class="contents contents_title">
       <span><b>학력</b> </span>
@@ -103,12 +104,11 @@
       2018 - 2020 | 석사 재학 (MS), 연세대학교 실내건축학과
       <br>
       2011 - 2017 | 학사 졸업 (BS), 한양대학교 실내건축디자인학과
-      <br>
-
     </span>
-
-
     <br>
+    <br>
+    <br>
+
 
     <div class="contents contents_title">
       <span><b>경력</b> </span>
@@ -121,11 +121,11 @@
       2017 | 한양대학교 BK21 석사과정 연구원
       <br>
       2016 | 제이랩 디자인팀 인턴
-      <br>
-
     </span>
-
     <br>
+    <br>
+    <br>
+
 
     <div class="contents contents_title">
       <span><b>참여 연구개발 과제</b> </span>
@@ -158,6 +158,7 @@
       </li>
     </ol>
     <br>
+    <br>
 
     <div class="contents contents_title">
       <span><b>지식재산권 및 등록 소프트웨어</b> </span>
@@ -180,6 +181,7 @@
       </li>
     </ol>
     <br>
+    <br>
 
     <div class="contents contents_title">
       <span><b>소프트웨어 & 웹 개발</b> </span>
@@ -200,6 +202,7 @@
       </li>
     </ol>
     <br>
+    <br>
 
     <div class="contents contents_title">
       <span><b> 디자인 프로젝트</b> </span>
@@ -215,6 +218,8 @@
       2016.03-6 | 한양대학교 실내건축디자인학과 졸업 작품전, “동작도서관 리뉴얼 프로젝트: Re-bootcamp”
 
     </span>
+    <br>
+    <br>
     <br>
 
     <div class="contents contents_title">
@@ -232,9 +237,11 @@
       2016 | 공로상, 2016 한양 실내건축디자인전 (졸업작품전)
       <br>
       2012 | 입선, “For-Rest”, 대한디지털건축대전 (디지털디자인 이미지 부분)
-      <br>
     </span>
     <br>
+    <br>
+    <br>
+
 
     <div class="contents contents_title">
       <span><b>국제논문</b> </span>
@@ -245,6 +252,7 @@
         Jin-Sung Kim, Jung-Sik Choi, Jin-Kook Lee, 2019, Approach to Design Reference Management using Auto-Recog-nition System of Room and Design Style, International Journal of Engineering & Technology, 8 (1.4) pp.56-64 2019.01.02
       </li>
     </ol>
+    <br>
     <br>
 
     <div class="contents contents_title">
@@ -266,6 +274,8 @@
       </li>
     </ol>
     <br>
+    <br>
+
 
     <div class="contents contents_title">
       <span><b>국제학술대회발표</b> </span>
@@ -308,13 +318,14 @@
       </li>
     </ol>
     <br>
+    <br>
+
 
     <div class="contents contents_title">
       <span><b> 국내컨퍼런스페이퍼</b> </span>
       <br>
     </div>
-    <span class="contact_monaco">
-      <ol>
+      <ol class="contact_monaco">
         <li>
           김진성, 이진국. "2D-CNN 기반 미인식 건축객체 유형정보 추론 접근방법 ", 2019 CDE학회 동계학술대회 pp.72-75. 2019.2
         </li>
@@ -346,7 +357,7 @@
           이진국, 김진성, 김하얀, 신재영,“수도권 지하철역 인근 건물 용도별 에너지사용량 웹 기반 시각화 도구개발”, 2017 한국CDE학회 동계학술대회논문집, pp.638-640, 2017.02
         </li>
       </ol>
-    </span>
+    <br>
     <br>
 
 
@@ -372,6 +383,8 @@
       2016.07-08 | 해외연수 - 친환경건축과 LEED Certificate, “Green Building & Interior Design Program” with prof. Suk-kyung Kim, Michigan State of University @ Michigan, US
     </span>
     <br>
+    <br>
+    <br>
 
 
     <div class="contents contents_title">
@@ -391,6 +404,8 @@
       <br>
       2011 | 부천고등학교 학습 및 진로 상담 멘토
     </span>
+    <br>
+    <br>
     <br>
 
 
