--- a/index.html
+++ b/index.html
@@ -325,38 +325,38 @@
       <span><b> 국내컨퍼런스페이퍼</b> </span>
       <br>
     </div>
-      <ol class="contact_monaco">
-        <li>
-          김진성, 이진국. "2D-CNN 기반 미인식 건축객체 유형정보 추론 접근방법 ", 2019 CDE학회 동계학술대회 pp.72-75. 2019.2
-        </li>
-        <li>
-          김진성, 이진국. "실내이미지 자동인식 기술을 활용한 지능형 디자인 사례 관리", 2018 실내디자인학회 추계학술대회 논문집, pp.72-75. 2018.10
-        </li>
-        <li>
-          송재열, 김진성, 이진국, “지능형 BIM 기반 설계품질검토 자동화를 위한 문장 내 대상 객체 및 속성정보 인식모델 구현 접근방안”, 2018 CDE학회 하계학술대회, pp.191-192, 2018.08
-        </li>
-        <li>
-          김진성, 송재열, 이진국, “딥러닝 기반 국내 아파트 실내사진 자동분류”, 2018 CDE학회 하계학술대회, pp.280-281, 2018.08
-        </li>
-        <li>
-          송재열, 김진성, 이진국. “딥러닝 기반 자연어처리 기술을 이용한 건축법규 문장간 유사도 측정과 활용방안”, 2018 CDE학회 동계학술대회, pp.472-pp.474 2018. 02
-        </li>
-        <li>
-          김진성, 김하얀, 이진국. (2017). “딥러닝기반 실내이미지 디자인스타일 자동분류”. 한국실내디자인학회 학술대회논문집, 19(3), 95-98. 2017.10
-        </li>
-        <li>
-          김진성, 이진국, 김하얀, 송재열 "건축물 설계품질 검토규칙의 KBimCode 변환을 지원하는 웹 기반 데이터베이스 응용 방안 제안”, 2017년도 한국CDE학회 하계학술대회논문집, pp. 37-39, 2017.08
-        </li>
-        <li>
-          신재영, 이진국, 김하얀, 김진성,“BIM기반 실내 동선 보행친화성 지표를 활용한 설계 대안평가 사례연구”, 2017 한국CDE학회 동계학술대회 논문집, pp.635-637, 2017.02
-        </li>
-        <li>
-          김하얀, 이진국, 신재영, 김진성,“Visual Language 기반 파라메트릭 모델링을 활용한 BIM 실내건축객체속성 정보활용사례연구”, 2017 한국CDE학회 동계학술대회 논문집, pp.632-634, 2017.02
-        </li>
-        <li>
-          이진국, 김진성, 김하얀, 신재영,“수도권 지하철역 인근 건물 용도별 에너지사용량 웹 기반 시각화 도구개발”, 2017 한국CDE학회 동계학술대회논문집, pp.638-640, 2017.02
-        </li>
-      </ol>
+    <ol class="contents_monaco">
+      <li>
+        김진성, 이진국. "2D-CNN 기반 미인식 건축객체 유형정보 추론 접근방법 ", 2019 CDE학회 동계학술대회 pp.72-75. 2019.2
+      </li>
+      <li>
+        김진성, 이진국. "실내이미지 자동인식 기술을 활용한 지능형 디자인 사례 관리", 2018 실내디자인학회 추계학술대회 논문집, pp.72-75. 2018.10
+      </li>
+      <li>
+        송재열, 김진성, 이진국, “지능형 BIM 기반 설계품질검토 자동화를 위한 문장 내 대상 객체 및 속성정보 인식모델 구현 접근방안”, 2018 CDE학회 하계학술대회, pp.191-192, 2018.08
+      </li>
+      <li>
+        김진성, 송재열, 이진국, “딥러닝 기반 국내 아파트 실내사진 자동분류”, 2018 CDE학회 하계학술대회, pp.280-281, 2018.08
+      </li>
+      <li>
+        송재열, 김진성, 이진국. “딥러닝 기반 자연어처리 기술을 이용한 건축법규 문장간 유사도 측정과 활용방안”, 2018 CDE학회 동계학술대회, pp.472-pp.474 2018. 02
+      </li>
+      <li>
+        김진성, 김하얀, 이진국. (2017). “딥러닝기반 실내이미지 디자인스타일 자동분류”. 한국실내디자인학회 학술대회논문집, 19(3), 95-98. 2017.10
+      </li>
+      <li>
+        김진성, 이진국, 김하얀, 송재열 "건축물 설계품질 검토규칙의 KBimCode 변환을 지원하는 웹 기반 데이터베이스 응용 방안 제안”, 2017년도 한국CDE학회 하계학술대회논문집, pp. 37-39, 2017.08
+      </li>
+      <li>
+        신재영, 이진국, 김하얀, 김진성,“BIM기반 실내 동선 보행친화성 지표를 활용한 설계 대안평가 사례연구”, 2017 한국CDE학회 동계학술대회 논문집, pp.635-637, 2017.02
+      </li>
+      <li>
+        김하얀, 이진국, 신재영, 김진성,“Visual Language 기반 파라메트릭 모델링을 활용한 BIM 실내건축객체속성 정보활용사례연구”, 2017 한국CDE학회 동계학술대회 논문집, pp.632-634, 2017.02
+      </li>
+      <li>
+        이진국, 김진성, 김하얀, 신재영,“수도권 지하철역 인근 건물 용도별 에너지사용량 웹 기반 시각화 도구개발”, 2017 한국CDE학회 동계학술대회논문집, pp.638-640, 2017.02
+      </li>
+    </ol>
     <br>
     <br>
 
