--- a/threejs_test/objloader.html
+++ b/threejs_test/objloader.html
@@ -105,7 +105,7 @@
 				camera.position.y = 1;
 				camera.position.z = 1;
 
-				controls = new THREE.OrbitControls(camera);
+				controls = new THREE.OrbitControls(camera, renderer.domElement);
 				controls.rotateSpeed = 1.0;
 				controls.zoomSpeed = 1.2;
 				controls.panSpeed = 0.8;
