--- a/threejs_test/objloader.html
+++ b/threejs_test/objloader.html
@@ -63,7 +63,7 @@
 			 */
 			function loadObjLoader() {
 				loader = new THREE.OBJLoader();
-				loader.load('./cat.obj', function (object) {
+				loader.load('./alt4.obj', function (object) {
 					// 모델 로드가 완료되었을때 호출되는 함수
 					scene.add(object);
 				}, function (xhr) {
