--- a/threejs_test/objloader.html
+++ b/threejs_test/objloader.html
@@ -40,7 +40,7 @@
 
 			initThree();
 			addDirectionalLight();
-			addAmbientLight();
+			// addAmbientLight();
 			loadObjLoader();
 
 			/**
@@ -50,11 +50,11 @@
 			 */
 			function addDirectionalLight() {
 
-				light = new THREE.DirectionalLight(0xffffff, 1);
+				light = new THREE.DirectionalLight(0xffffff, 0.8);
 				light.castShadow = true;
-				light.position.x = 5;
-				light.position.y = 5;
-				light.position.z = 5;
+				light.position.x = 10;
+				light.position.y = 20;
+				light.position.z = 50;
 				scene.add(light);
 			}
 		/**
@@ -82,7 +82,7 @@
 			 */
 			function loadObjLoader() {
 				loader = new THREE.OBJLoader();
-				loader.load('./alt4_small.obj', function (object) {
+				loader.load('./ALT4_small_revised.obj', function (object) {
 					// 모델 로드가 완료되었을때 호출되는 함수
 					scene.add(object);
 				}, function (xhr) {
@@ -107,7 +107,7 @@
 					console.log('이 브라우저는 WEBGL을 지원하지 않습니다.');
 				}
 
-				camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+				camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
 
 				let renderer = new THREE.WebGLRenderer({
 					antialias: true
@@ -117,12 +117,12 @@
 				renderer.shadowMap.type = THREE.PCFSoftShadowMap;
 				document.body.appendChild(renderer.domElement);
 
-				let axes = new THREE.AxisHelper(10);
+				let axes = new THREE.AxisHelper(90);
 				scene.add(axes);
 
-				camera.position.x = 2;
-				camera.position.y = 1;
-				camera.position.z = 1;
+				camera.position.x = 100;
+				camera.position.y = 100;
+				camera.position.z = 100;
 
 				controls = new THREE.OrbitControls(camera, renderer.domElement);
 				controls.rotateSpeed = 1.0;
