--- a/webar_test/index.html
+++ b/webar_test/index.html
@@ -1,5 +1,8 @@
+<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+<script src="https://threejs.org/build/three.min.js"></script>
 <!--
     aframe-extras loaders is needed in order to add glTF models (And a whole lot of other model formats) into your AR Project.
 
@@ -24,16 +27,16 @@
    <!-- <a-asset-item id="tree-mtl" src="/path/to/tree.mtl"></a-asset-item> -->
  </a-assets>
     <a-marker preset='hiro'>
-      <!-- <a-entity
+      <a-entity
       id="drone"
       position="0 0 0"
       scale="1 1 1"
       gltf-model-next="src: url(./models/busterDrone.gltf);"
       animation-mixer>
-      </a-entity> -->
-      <a-entity
+      </a-entity>
+      <!-- <a-entity
       obj-model="obj:#alt-obj">
-        </a-entity>
+        </a-entity> -->
     </a-marker>
 
     <a-entity camera></a-entity>
